# TE3002B.102_Team2

./: .gitignore  .gitmodules  README.md
Control_Module/InClass1/: rdlq_vs_pso_double_pendulum.py
Control_Module/Visual_Servoing/Vision/: apriltags_node.py
Control_Module/Visual_Servoing_Project/: .gitignore  README.md
Control_Module/Visual_Servoing_Project/report/: README.md  main.tex
Control_Module/Visual_Servoing_Project/tools/: pick_pipeline.py
ML_Module/ML_Reto/: arrow_classifier.py
ML_Module/ML_Reto/Results/: model_memory.pkl
RM_Module/mini_reto_s2/: README.md  package.xml  setup.cfg  setup.py
RM_Module/mini_reto_s2/launch/: mission.launch.py  modules.launch.py
RM_Module/mini_reto_s2/mini_reto_s2/: __init__.py  anymal_gait.py  coordinator.py  husky_pusher.py  puzzlebot_arm.py  sim.py  xarm.py
RM_Module/mini_reto_s2/mini_reto_s2/nodes/: __init__.py  anymal_gait_node.py  coordinator_node.py  husky_pusher_node.py  puzzlebot_arm_node.py
RM_Module/mini_reto_s2/tests/: test_anymal_gait.py  test_coordinator.py  test_husky_pusher.py  test_puzzlebot_arm.py  test_sim.py  test_xarm.py
RM_Module/notebooks/: avance_robots_colaborativos.ipynb  build_notebook.py
RM_Module/notebooks/.ipynb_checkpoints/: avance_robots_colaborativos-checkpoint.ipynb
RM_Module/robots_colaborativos_vision/: README.md  demo.py
Vision_Module/: opencv_test.py  requirements.txt
Vision_Module/act_2_04/: actividad_2_04.py
dataset_generation/: README.md  data.yaml  extract_frames.py  generate_yolo_dataset.py  segmentation_image.py  train_yolo.py  yolo_detector_node.py
(+30 files in other folders)
